--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece TCG Simulator v5.2 (Safe Save)</title>
+    <title>One Piece TCG Pack Ripper v5.2</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
         :root {
@@ -348,7 +348,7 @@
 </head>
 <body>
 
-    <h1>🏴‍☠️ One Piece TCG Simulator</h1>
+    <h1>🏴‍☠️ One Piece TCG Pack Ripper</h1>
 
     <div class="menu-bar" id="menuBar"></div>
 
